[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/world/background.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/world/frame.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/world/level_01-bg.png" type="Texture" id=4]
[ext_resource path="res://Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level1.gd" type="Script" id=6]

[node name="Level1" type="Node2D"]
script = ExtResource( 6 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="frame" type="Sprite" parent="."]
position = Vector2( 960, 446.624 )
texture = ExtResource( 3 )

[node name="level_01-bg" type="Sprite" parent="frame"]
position = Vector2( 434, 63.2543 )
texture = ExtResource( 4 )

[node name="CharacterA" parent="." instance=ExtResource( 5 )]
position = Vector2( 513.866, 511.07 )

[node name="CharacterB" parent="." instance=ExtResource( 5 )]
position = Vector2( 818.906, 511.07 )

[node name="CharacterC" parent="." instance=ExtResource( 5 )]
position = Vector2( 1121.18, 511.07 )
